--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 700px;
     top: -40px;
-    
+
     @include phone {
         height: 320px;
     }
@@ -25,7 +25,7 @@
         margin: 0 auto;
 
         @include phone {
-            top: 115px;
+            top: 4em;
             height: 82px;
             width: 232px;
             font-size: 24px;
